data/derived/fa15/progs/unify/prog0122.ml.out
Characters 20-23:
  let _ = digitsOfInt 1.5;;
                      ^^^
Error: This expression has type float but an expression was expected of type
         int
